# braitenberg_local_planner

./: CMakeLists.txt  braitenberg_local_planner_plugin.xml  package.xml
include/braitenberg_local_planner/: braitenberg_local_planner.hpp
src/: braitenberg_local_planner.cpp
