<?xml version="1.0"?>
<package format="2">
  <name>braitenberg_local_planner</name>
  <version>0.0.1</version>
  <description>
    Local planner using Braiten Berg Vechicle model.
  </description>


  <maintainer email="groadpg@gmail.component">Ryodo Tanaka</maintainer>

  <license>BSD</license>

  <url type="repository">http://github.com/RyodoTanaka/braitenberg_local_planner</url>

  <author email="groadpg@gmail.com">Ryodo Tanaka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>costmap_converter</depend>

  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>libg2o</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>visualization_msgs</depend>

  <export>
    <nav_core plugin="${prefix}/braitenberg_local_planner_plugin.xml"/>
  </export>
</package>
